projet-location-voitures/rent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rentalservice
    version: "1.0"
  name: rentalservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rentalservice
  template:
    metadata:
      labels:
        app: rentalservice
    spec:
      containers:
        - name: rentalservice
          image: kajanan2/rentalservice:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: rentalservice
  name: rentalservice
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: rentalservice
  type: ClusterIP
