projet-location-voitures/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: userservice
    version: "1.0"
  name: userservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: kajanan2/userservice:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: userservice
  name: userservice
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
      name: http
  selector:
    app: userservice
  type: ClusterIP
