projet-location-voitures/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - microservice-gateway
  http:
    - match:
        - uri:
            prefix: /rental/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: rentalservice.default.svc.cluster.local
    - match:
        - uri:
            prefix: /users/
      rewrite:
        uri: /users/
      route:
        - destination:
            port:
              number: 80
            host: userservice.default.svc.cluster.local
